@@ -2,7 +2,7 @@
 PACKAGE = chemfigit
 MAJOR = 0
 MINOR = 1
-MICRO = 4
+MICRO = 5
 TAG = 
 AUTHOR = James C. Stroud
 EMAIL = jstroud@mbi.ucla.edu
